# ChangeLog for app-i18n/ibus-chewing
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-chewing/ChangeLog,v 1.14 2009/05/31 13:24:22 matsuu Exp $

*ibus-chewing-1.0.10.20090523 (31 May 2009)

  31 May 2009; MATSUU Takuto <matsuu@gentoo.org>
  -ibus-chewing-1.0.4.20090323.ebuild, -ibus-chewing-1.0.5.20090330.ebuild,
  -ibus-chewing-1.0.6.20090403.ebuild, -ibus-chewing-1.0.7.20090414.ebuild,
  +ibus-chewing-1.0.10.20090523.ebuild:
  Version bumped. Removed old versions.

*ibus-chewing-1.0.8.20090428 (07 May 2009)

  07 May 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-chewing-1.0.8.20090428.ebuild:
  Version bumped.

*ibus-chewing-1.0.7.20090414 (14 Apr 2009)

  14 Apr 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-chewing-1.0.7.20090414.ebuild:
  Version bumped.

*ibus-chewing-1.0.6.20090403 (03 Apr 2009)

  03 Apr 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-chewing-1.0.6.20090403.ebuild:
  Version bumped.

*ibus-chewing-1.0.5.20090330 (30 Mar 2009)

  30 Mar 2009; MATSUU Takuto <matsuu@gentoo.org>
  -files/ibus-chewing-1.0.0.20090220-gentoo.patch,
  -ibus-chewing-1.0.2.20090302.ebuild, -ibus-chewing-1.0.3.20090311.ebuild,
  +ibus-chewing-1.0.5.20090330.ebuild:
  Version bumped. Removed old versions.

*ibus-chewing-1.0.4.20090323 (23 Mar 2009)

  23 Mar 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-chewing-1.0.4.20090323.ebuild:
  Version bumped.

*ibus-chewing-1.0.3.20090311 (11 Mar 2009)

  11 Mar 2009; MATSUU Takuto <matsuu@gentoo.org>
  -ibus-chewing-0.1.1.20081023.ebuild, -ibus-chewing-1.0.0.20090220.ebuild,
  +ibus-chewing-1.0.3.20090311.ebuild:
  Version bumped. Removed old versions.

*ibus-chewing-1.0.2.20090302 (02 Mar 2009)

  02 Mar 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-chewing-1.0.2.20090302.ebuild:
  Version bumped.

*ibus-chewing-1.0.0.20090220 (25 Feb 2009)

  25 Feb 2009; MATSUU Takuto <matsuu@gentoo.org>
  +files/ibus-chewing-1.0.0.20090220-gentoo.patch,