@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/ibus-chewing
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-chewing/ChangeLog,v 1.14 2009/05/31 13:24:22 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-chewing/ChangeLog,v 1.15 2009/06/24 16:00:20 matsuu Exp $
+
+*ibus-chewing-1.2.0.20090624 (24 Jun 2009)
+
+  24 Jun 2009; MATSUU Takuto <matsuu@gentoo.org>
+  -ibus-chewing-1.0.8.20090428.ebuild, +ibus-chewing-1.2.0.20090624.ebuild:
+  Version bumped.
 
 *ibus-chewing-1.0.10.20090523 (31 May 2009)
 
